@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.0
 ====================================
+- Add ActiveUsers snippet that shows a list of active, logged-in users
 - Add file-based hooks to Login hook calls
 - Complete OOP refactoring to provide more stable development and better code isolation
 - Add unit test framework and over 30 tests
